--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,8 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "heimdal"
-version = "0.1.0" # 必要に応じてバージョンを変更してください
-description = "File/Directory Zip Compression and AES Encryption Tool"
+version = "0.6.0"
+description = "Directory Encryption Tool"
 readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
@@ -16,8 +16,8 @@ dependencies = [
 heimdal = "heimdal.heimdal:main"
 
 [project.urls]
-"Homepage" = "https://github.com/mallocfree009/heimdal" # 必要に応じてリポジトリURLを変更してください
-"Bug Tracker" = "https://github.com/mallocfree009/heimdal/issues" # 必要に応じてIssue Tracker URLを変更してください
+"Homepage" = "https://github.com/mallocfree009/heimdal"
+"Bug Tracker" = "https://github.com/mallocfree009/heimdal/issues"
 
 [tool.setuptools]
 packages = ["heimdal"]
